force-app/main/default/objects/Bus__c/fields/Bus_Company__c.field-meta.xml
<CustomField>
    <fullName>Bus_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Company</label>
    <referenceTo>Bus_Company__c</referenceTo>
    <relationshipLabel>Buses</relationshipLabel>
    <relationshipName>Buses</relationshipName>
    <type>Lookup</type>
</CustomField>