force-app/main/default/objects/Bus__c/fields/Bus_Status__c.field-meta.xml
<CustomField>
    <fullName>Bus_Status__c</fullName>
    <label>Bus Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Limited Seats</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>