force-app/main/default/objects/Bus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bus_Company__c</columns>
    <columns>Bus_Status__c</columns>
    <columns>Passenger_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>